ncc/testsuite/negative/redef.n
class M {
  f (_ : int) : void {}
  f (_ : int) : void {} // E: redefinition

  this () {}
  this () {} // E: redefinition

  static this () {}
  static this () {} // E: redefinition
}

class C {
  protected virtual m () : void {}      // OK
  protected virtual m2 () : void {}      // OK
  protected virtual m3 () : void {}      // OK
  protected m4 () : void {}      // OK
  protected m5 () : void {}      // OK
}

class D : C {
  protected m () : void {}        // E: hides
  protected new m2 () : void {}        // OK
  protected override m3 () : void {}        // OK
  protected override m4 () : void {}        // E: `override' specified.*no `virtual'
  protected new m5 () : void {}        // OK
  
  protected new m1_not_present () : void {}        // E: no such member
  protected override m2_not_present () : void {}        // E: no such member
}

class E : D {
  protected override m3 () : void {}        // OK
  protected override m5 () : void {}        // E: `override' specified.*no `virtual'
}

class Overload {
  meth () : int { 3 }
  meth () : string { "3" } // E: return type overload
  
  meth3 (_ : int) : int { 3 }
  meth3 (_ : int) : string { "3" } // E: return type overload
  
  meth4 (_ : int) : int { 3 }  // OK
  meth4 (_ : string) : string { "3" } // OK
  
  meth2 () : int { 3 }
  meth2 () : int { 3 } // E: redefinition
}
